# tenhou-gacha

./: .gitignore  README.md  package-lock.json  package.json  playwright.base.config.ts  playwright.config.ts  vite.config.ts
.github/workflows/: deploy.yml
messages/: en.json  jp.json
project.inlang/: settings.json
src/lib/: share.test.ts  share.ts
src/lib/components/: Hand.svelte  Hand.svelte.spec.ts  ShantenChart.svelte  ShareButtons.svelte  TenhouOverlay.svelte  Tile.svelte
src/lib/mahjong/: protocol.ts  simulator.worker.ts  tiles.test.ts  tiles.ts
src/routes/: +layout.svelte  +page.svelte  base-path.base.e2e.ts  layout.css  page.e2e.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
