[package]
name = "tenhou-sim"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt saves <1% here (the binary is mostly lookup tables) and old binaryen
# versions corrupt the externref table emitted by wasm-bindgen, so skip it.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
xiangting = "5"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = true
